@@ -1,3 +1,12 @@
+2005-12-31 Joerg Wunsch <j.gnu@uriah.heep.sax.de>
+
+	Fix the examples installation for non-doc builds.
+	* Makefile.am: always include "doc" into SUBDIRS.
+	* configure.ac: make "api" conditional, not "doc".
+	* doc/Makefile.am: make the "api" subdir conditional.
+	* doc/examples/Makefile.am: correctly uninstall, as
+	opposed to doc/api/Makefile.am doing it for us.
+
 2005-12-29 Joerg Wunsch <j.gnu@uriah.heep.sax.de>
 
 	Released avr-libc-1.4.1.
